manh up code thong ke

--- a/webBanTiVi/src/main/resources/templates/admin/layout.html
+++ b/webBanTiVi/src/main/resources/templates/admin/layout.html
@@ -22,10 +22,11 @@
     <link rel="stylesheet" th:href="@{/admin/assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css}"/>
     <link rel="stylesheet" th:href="@{/admin/plugin/css/select2-plugin.css}"/>
     <link rel="stylesheet" th:href="@{/admin/plugin/css/bill.css}"/>
-
+    <link rel="stylesheet" th:href="@{/admin/plugin/css/dashbroad.css}">
     <!-- Helpers -->
     <script th:src="@{/admin/assets/vendor/js/helpers.js}"></script>
     <script th:src="@{/admin/assets/vendor/libs/jquery/jquery.js}"></script>
+
 </head>
 <body>
 <div class="layout-wrapper layout-content-navbar">
@@ -47,7 +48,7 @@
     <div class="layout-overlay layout-menu-toggle"></div>
 </div>
 <!--build-->
-
+<!--<script  th:src="@{/admin/plugin/js/loadImage.js}"></script>-->
 <script th:src="@{/admin/assets/vendor/libs/popper/popper.js}"></script>
 <script th:src="@{/admin/assets/vendor/js/bootstrap.js}"></script>
 <script th:src="@{/admin/assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.js}"></script>
@@ -63,12 +64,14 @@
 <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
 
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
-<!--end date range picker-->
+
+end date range picker
 <!-- Page JS -->
 <script th:src="@{/admin/assets/js/pages-account-settings-account.js}"></script>
 
 <script th:src="@{/admin/plugin/js/date_picker_order.js}"></script>
 
 <script th:src="@{/admin/plugin/js/select2-plugin.js}"></script>
+
 </body>
 </html>
