--- a/webBanTiVi/src/main/resources/templates/admin/page/bill/bill.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/bill/bill.html
@@ -58,7 +58,7 @@
             </div>
             <hr>
             <div class="overflow-auto">
-                <table class="table table-hover table-bordered overflow-hidden">
+                <table class="table table-hover table-bordered overflow-hidden" id="myTable">
                     <thead>
                     <tr class="row-table">
                         <th>#</th>
