--- a/webBanTiVi/src/main/resources/templates/admin/page/dashboard/dashboard.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/dashboard/dashboard.html
@@ -1,4 +1,9 @@
-<h4 class="fw-semibold py-3 mb-4"> Hôm nay (<script>document.write( new Date().toLocaleDateString())</script>)</h4>
+<h4 class="fw-semibold py-3 mb-4"> Thống kê đơn hàng theo ngày :
+    <br>
+    <br>
+    <input type="date" id="date" class="form-control w-px-200" th:value="${date}">
+</h4>
+
 <div class="row">
     <div class="col-md-6 col-lg-3 mb-4 ">
         <div class="card h-100 border-success" style="border-left: 5px solid;">
@@ -15,8 +20,8 @@
             <div class="card-header d-flex align-items-center justify-content-between pb-0 text-uppercase text-primary">
                 Tổng đơn hàng
             </div>
-            <div class="card-body">
-                <span class="fw-bold">6</span>
+            <div class="card-body" >
+                <button class="fw-bold" id="completed" style="border : none" ></button>
             </div>
         </div>
     </div>
@@ -26,6 +31,7 @@
                 Đơn hoàn trả
             </div>
             <div class="card-body">
+                <span class="fw-bold" id="return"></span>
             </div>
         </div>
     </div>
@@ -35,7 +41,58 @@
                 Đơn chờ xử lý
             </div>
             <div class="card-body">
+                <span class="fw-bold" id="processing"></span>
             </div>
         </div>
     </div>
 </div>
+
+<script>
+    $("#completed").click(function (){
+        var date = $("#date").val();
+        window.location.href = "http://localhost:8080/admin/bill/list_bill?billStatus=WP&date=2023/11/01-2023/11/02"
+
+    })
+    function click(){
+        window.location.href = "http://localhost:8080/admin/bill/list_bill"
+    }
+    $(document).ready(function () {
+        $("#date").change(function () {
+            var date = $(this).val();
+            $.ajax({
+                url: "/admin/dashboard/list",
+                type: "GET",
+                dataType: "json",
+                data: {
+                    date: date
+                },
+                success: function (myData) {
+                    console.log(myData)
+                    $("#completed").text(myData.length);
+                }
+            })
+            $.ajax({
+                url: "/admin/dashboard/listReturn",
+                type: "GET",
+                dataType: "json",
+                data: {
+                    date: date
+                },
+                success: function (DataReturn) {
+                    $("#return").text(DataReturn.length);
+                }
+            });
+            $.ajax({
+                url: "/admin/dashboard/listProcessing",
+                type: "GET",
+                dataType: "json",
+                data: {
+                    date: date
+                },
+                success: function (DataProcessing) {
+                    $("#processing").text(DataProcessing.length);
+                }
+            });
+        });
+    });
+</script>
