--- a/webBanTiVi/src/main/resources/templates/login/confirm-register.html
+++ b/webBanTiVi/src/main/resources/templates/login/confirm-register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Big6 Shop</title>
     <meta name="description" content=""/>
-    <link rel="stylesheet" href="/user/css/confirm_register.css">
+    <link rel="stylesheet" th:href="@{/admin/plugin/css/comfirm_register.css}">
     <link rel="icon" type="image/x-icon" th:href="@{/image/logobig6-03.png}"/>
     <link rel="stylesheet" th:href="@{/admin/assets/vendor/fonts/boxicons.css}"/>
     <link rel="stylesheet" th:href="@{/admin/assets/vendor/css/bootstrap.css}"/>
@@ -41,9 +41,9 @@
         <div class="authentication-inner">
             <div class="verification-page">
                 <h2>Nhập mã xác thực</h2>
-                <form th:action="@{confirm-register}" method="post">
-                    <div class="form-group">
-                        <input type="text" id="verification-code" name="verification-code"
+                <form th:action="@{/login/confirm-register}" method="post">
+                    <div>
+                        <input class="form-group" type="text" id="verification-code" name="verification-code"
                                placeholder="Nhập mã xác thực" required>
                     </div>
                     <button type="submit">Xác thực</button>
