--- a/webBanTiVi/src/main/resources/templates/login/error403.html
+++ b/webBanTiVi/src/main/resources/templates/login/error403.html
@@ -50,7 +50,7 @@
                 <a href="#" class="header-nav-item-link">HỎI ĐÁP</a>
             </li>
             <li class="header-nav-item">
-                <a href="/client" class="header-nav-item-link">QUAY LẠI</a>
+                <a href="/" class="header-nav-item-link">QUAY LẠI</a>
             </li>
         </ul>
     </nav>
