--- a/webBanTiVi/src/main/resources/templates/user1/layout/_navbar.html
+++ b/webBanTiVi/src/main/resources/templates/user1/layout/_navbar.html
@@ -99,7 +99,7 @@
                         <a class="nav-link page" href="/invoice">Đơn hàng</a>
                     </li>
                     <li class="nav-item mx-3">
-                        <a class="nav-link page" href="javascript:void(0)">Khuyến mãi</a>
+                        <a class="nav-link page" href="/promotion">Khuyến mãi</a>
                     </li>
                     <li class="nav-item mx-3">
                         <a class="nav-link page" href="javascript:void(0)">Liên hệ</a>
